--- a/scud/package.json
+++ b/scud/package.json
@@ -11,9 +11,12 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "vue": "^2.4.2",
     "vue-awesome-swiper": "^2.6.7",
-    "vue-router": "^2.7.0"
+    "vue-axios": "^2.0.2",
+    "vue-router": "^2.7.0",
+    "vuex": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
