--- a/scud/package.json
+++ b/scud/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "axios": "^0.16.2",
     "vue": "^2.4.2",
+    "vue-address-picker": "^1.1.1",
     "vue-awesome-swiper": "^2.6.7",
     "vue-axios": "^2.0.2",
+    "vue-datepicker": "^1.3.0",
     "vue-router": "^2.7.0",
     "vuex": "^3.0.0"
   },
